--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             --primary-purple: #8b5cf6;
             --text-color: #ffffff;
             --input-bg: #111111;
-            --border-color: #2e2e2e;
+            --border-color: #006400;
         }
 
         body {
