--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         :root {
             --bg-color: #000000;
             --card-bg: #121212;
-            --primary-purple: #8b5cf6;
+            --primary-purple: #7af65c;
             --text-color: #ffffff;
             --input-bg: #111111;
             --border-color: #006400;
